# Visualization-of-Information-NYC-Accidents

./: README.md  pyproject.toml
app/: P1.py  P2.py  P3.py  P4.py  P5.py  P6.py  P7.py  P8.py  app.py  colors.py  config.toml
app/.ipynb_checkpoints/: core-checkpoint.ipynb
app/data/: New York 2018-06-01 to 2018-09-30.csv  New York 2020-06-01 to 2020-09-30.csv
app/datasetsVisualizations/: df_V1.csv  df_V2.csv  df_V3.csv  df_V4.csv  df_V5.csv  df_V6.csv  df_V7_accidents.csv  df_V7_background.csv  df_V7_comb.csv  df_V7_people.csv  df_V8_normalized.csv
data/: new-york-city-counties.geojson
