[tool.poetry]
name = "projecte1-vi"
version = "0.1.0"
description = ""
authors = ["Marc Camps <marc.camps@bookline.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
geopandas = "^0.14.0"
pandas = "^2.1.2"
altair = "^5.1.2"
ipykernel = "^6.26.0"
install = "^1.3.5"
streamlit = "^1.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
